[project]
name = "chattune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentops>=0.4.19",
    "autogen-agentchat>=0.7.2",
    "autogen-ext[openai]>=0.7.2",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
]
