[project]
name = "chattune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentops>=0.4.19",
    "aiofiles>=24.1.0",
    "autogen-agentchat>=0.7.2",
    "autogen-ext[openai]>=0.7.2",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.35.0",
]
